# codepulse

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
parsers/: c.yml  cpp.yml  go.yml  java.yml  kotlin.yml  php.yml  python.yml  ruby.yml  rust.yml  scala.yml  swift.yml  typescript.yml
scripts/benchmark/: README.md  parse.sh  questions.json  report.sh  repos.json  run.sh  run_all.sh  setup.sh
scripts/benchmark/tests/: test_benchmark.sh
src/codepulse/: cli.py  cloner.py  config.py  db.py  embeddings.py  graph.py  mcp.py  mcp_server.py  parser.py  repo_utils.py  routes.py  watcher.py
src/codepulse/compat/: codegraph.py  scip.py
tests/: conftest.py  test_accuracy.py  test_cli.py  test_cloner.py  test_config.py  test_db.py  test_graph.py  test_languages.py  test_mcp.py  test_mcp_server.py  test_parser.py  test_regression.py  test_repo_utils.py  test_scip.py  test_smoke.py  test_version_compat.py  test_watcher.py
tests/fixtures/: accuracy.py  accuracy.ts  sample.py  sample.ts
web/: DESIGN.md  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/graph/: route.ts
web/app/api/search/: route.ts
web/components/: force-graph.tsx  node-detail.tsx  stats-bar.tsx
web/lib/: db.ts
web/tests/: force-graph.test.tsx  node-detail.test.tsx  test_animations.test.tsx  test_states.test.tsx  test_stats.test.tsx
